--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^3.3.31",
+    "@types/node": "^13.13.4",
     "autoprefixer": "^9.6.4",
     "css-loader": "^2.1.1",
     "file-loader": "^4.2.0",
