--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^1.2.1",
     "swiper": "^5.3.8",
     "terser-webpack-plugin": "^2.3.3",
     "ts-loader": "^5.4.4",
