--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^5.2.0",
+    "sass": "^1.39.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "swiper": "^6.5.9",
