--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An Image-Slider app for 2sxc",
   "main": "(none)",
   "scripts": {
-    "build-bs4": "webpack"
+    "build-bs4": "webpack --env style=bs4",
+    "build-bs5": "webpack --env style=bs5"
   },
   "author": "2sic internet solutions",
   "license": "ISC",
