--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/swiper": "^5.4.3",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^4.4.1",
+    "bs5": "npm:bootstrap@^5.1.3"
   }
 }
